Button to Open Browser--
Handling No Internet Messages (English & Arabic)

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -6,5 +6,8 @@
     <string name="search">البحث</string>
     <string name="api_county_code">eg</string>
     <string name="searchbar">ابحث...</string>
+    <string name="noInternet">لا يوجد شبكة اتصال</string>
+    <string name="connectionError">مشكلة فى الشبكة</string>
+    <string name="rerty">حاول مرةاخرى</string>
 
 </resources>
