--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,7 @@
     <string name="noInternet">No Internet</string>
     <string name="connectionError">Connection Error</string>
     <string name="rerty">Retry</string>
+    <string name="error">An error occured: </string>
+
 
 </resources>
